--- a/package.json
+++ b/package.json
@@ -8,26 +8,16 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^3.9.0",
-    "@distube/ytdl-core": "^4.15.8",
+    "@distube/ytdl-core": "^4.15.1",
     "@google-cloud/speech": "^6.7.0",
-    "@microsoft/tiktokenizer": "^1.0.9",
     "@types/fluent-ffmpeg": "^2.1.27",
-    "axios": "^1.7.9",
-    "cheerio": "^1.0.0",
-    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "google-auth-library": "^9.15.0",
-    "google-spreadsheet": "^4.1.4",
-    "http-proxy-agent": "^7.0.2",
-    "openai": "^4.76.0",
-    "tiktoken": "^1.0.17",
-    "youtube-dl-exec": "^3.0.12",
-    "youtube-sr": "^4.3.11"
+    "openai": "^4.71.1",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.8.6",
     "@types/node-fetch": "^2.6.10",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
