--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cheerio": "^1.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
+    "http-proxy-agent": "^7.0.2",
     "openai": "^4.76.0",
     "tiktoken": "^1.0.17",
     "youtube-dl-exec": "^3.0.12",
